[gd_scene load_steps=2 format=3 uid="uid://cr422mechuym5"]

[ext_resource type="Script" path="res://scenes/enemy_stat_display/enemy_stat_display.gd" id="1_is3f8"]

[node name="EnemyStatDisplay" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = -116.0
offset_bottom = -620.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_is3f8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Level:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelText" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
step = 1.0
show_percentage = false

[node name="HPProgressBarLabel" type="Label" parent="HPProgressBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "HP: 400/400"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BossTimerContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="BossTimerLabel" type="Label" parent="BossTimerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Boss Timer:"
horizontal_alignment = 1

[node name="BossTimerProgressBar" type="ProgressBar" parent="BossTimerContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
step = 1.0
show_percentage = false

[node name="BossTimerLabel" type="Label" parent="BossTimerContainer/BossTimerProgressBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Time Left: 30 Seconds"
horizontal_alignment = 1
vertical_alignment = 1
